# k_means_CUDA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  check_CIFAR10.txt  cmake_install.cmake  k_means_cuda  k_means_cuda.cu  kmeans_cuda.cuh  kmeans_par  kmeans_parallel.cu  kmeans_parallel.cuh  kmeans_seq  kmeans_sequential.cpp  kmeans_sequential.h  mnist_image_main.cu  mnist_main.cpp  mnist_main.cu  output.txt  shared_kmean_par  shared_kmean_par.cuh  shared_kmeans_par  shared_kmeans_par.cu
